--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.3.4
   asyncstate: ^2.1.0
   loading_animation_widget: ^1.2.0+4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
